tests/ui/fail/float_eq_without_finite.stderr
error[E0277]: the trait bound `f64: std::cmp::Eq` is not satisfied
 --> tests/ui/fail/float_eq_without_finite.rs:5:14
  |
4 | #[nnn(derive(PartialEq, Eq))]
  |                         -- in this derive macro expansion
5 | struct Float(f64);
  |              ^^^ the trait `std::cmp::Eq` is not implemented for `f64`
  |
  = help: the following other types implement trait `std::cmp::Eq`:
            i128
            i16
            i32
            i64
            i8
            isize
            u128
            u16
          and $N others
note: required by a bound in `AssertParamIsEq`
 --> $RUST/core/src/cmp.rs
  |
  | pub struct AssertParamIsEq<T: Eq + ?Sized> {
  |                               ^^ required by this bound in `AssertParamIsEq`
  = note: this error originates in the derive macro `Eq` (in Nightly builds, run with -Z macro-backtrace for more info)
